{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 211,
  "lineage": "7b99df36-6ee0-e854-fad6-e2dea6b5a2af",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.185.187.120",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-03-11T01:12:06.123-07:00",
            "id": "projects/data-shard-444014-p9/regions/asia-southeast1/addresses/nat",
            "name": "nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "data-shard-444014-p9",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/regions/asia-southeast1/addresses/nat",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/regions/asia-southeast1/routers/router"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-11T01:12:29.058-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-shard-444014-p9/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/sallystore-vpc",
            "priority": 1000,
            "project": "data-shard-444014-p9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-11T01:12:28.901-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-shard-444014-p9/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/sallystore-vpc",
            "priority": 1000,
            "project": "data-shard-444014-p9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-11T01:12:28.917-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-shard-444014-p9/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/sallystore-vpc",
            "priority": 1000,
            "project": "data-shard-444014-p9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-11T21:21:23.595-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/data-shard-444014-p9/global/firewalls/allow-jenkins",
            "log_config": [],
            "name": "allow-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/default",
            "priority": 1000,
            "project": "data-shard-444014-p9",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/firewalls/allow-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/data-shard-444014-p9/global/networks/sallystore-vpc",
            "mtu": 0,
            "name": "sallystore-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "data-shard-444014-p9",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/sallystore-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-11T01:12:29.397-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/data-shard-444014-p9/regions/asia-southeast1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/sallystore-vpc",
            "project": "data-shard-444014-p9",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/regions/asia-southeast1/routers/router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "data-shard-444014-p9/asia-southeast1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/regions/asia-southeast1/addresses/nat"
            ],
            "project": "data-shard-444014-p9",
            "region": "asia-southeast1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/regions/asia-southeast1/subnetworks/sallystore-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.vpc",
            "google_compute_router.router",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-11T01:12:30.234-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/data-shard-444014-p9/regions/asia-southeast1/subnetworks/sallystore-subnet",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "sallystore-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/global/networks/sallystore-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "data-shard-444014-p9",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "k8s-pod-range"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "k8s-service-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/data-shard-444014-p9/regions/asia-southeast1/subnetworks/sallystore-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}